public/stylesheets/main.css
* {
    margin:0;
    padding:0;
}



html, html{
    min-height: 100%;
    position: relative;



} /* changed this part for footer to work, made the whole body act as the page container.
/*body, html {height: 100%;}*/

body {
    background-color: #fff2df;
    min-height: 500px;
    background-repeat: no-repeat;
    /*background-repeat: repeat;*/
    background-attachment: fixed;
    /*background-image: url("../pics/peach1.png");*/

}

input {
    text-align: center;
}

.btn {
    color: #b16f6fde;
}
.btn.btn-primary {
    color: #306310;
}
.btn.btn-primary:hover {
    color: #636161;
}
.btn.btn-icon {
    color: inherit;
}

.image-display img {
    max-width: 500px;
}



.new-icon, .author-icon, .multi-icon, .family-icon, .private-icon {


    color: #ffffff;
    background-color: #636161;
    border-radius: 50%;
    display: inline-block;

    height:45px;
    width:45px;
    font-size: 15px;
    text-transform: uppercase;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);

}


.newblogpostpage {
    height: 100vh;
}

.heading h3 {
    color: #636161;
    font-family: 'Raleway',sans-serif;
    font-size: 45px;
    font-weight: 800;
    line-height: 72px;
    margin: 30px 0 24px;
    text-align: center;
    text-transform: uppercase;

}

.heading p {
    color: gray;

}

#count_message {
    color:#c3b9aa
}



.w3-display-container{position:relative}
.w3-animate-opacity{animation:opac 0.8s}@keyframes opac{from{opacity:0} to{opacity:1}}
.w3-display-middle{position: absolute;top:40%;left:50%;transform:translate(-50%,-50%);-ms-transform:translate(-50%,-50%)}
.w3-jumbo{font-size:5vw!important}
.w3-animate-top{position:relative;animation:animatetop 0.4s}@keyframes animatetop{from{top:-300px;opacity:0} to{top:0;opacity:1}}
.w3-large{font-size:1.5vw!important}
.w3-center{text-align:center!important}
.w3-border-grey{border-color:#9e9e9e!important}

.img-samesize{
    height: 200px;
}

/*POST INDEX CSS*/
.year {
    font-family: 'Roboto Slab', serif;
    color: #636161;
}



.img-fluid-small {
    height: 100px;
}

.post-title {
    margin-top: 5px;
    font-family: 'Raleway',sans-serif;
    text-transform: capitalize;
    font-size: 30px;

}

.img-fluid {
    height: 200px;
}



section .post {
    line-height: 1.5;
    font-family: 'Montserrat Alternates' , sans-serif;
}
section .post a {
    min-height: 456px;
    text-decoration-line: none;
    color: #3a3935;
    margin-bottom: 2em;
    display: block;
    border: 3px solid rgba(0,0,0,0.1);
    border-radius: 0;
    background: #f5f5f5;
    padding: 20px;
    position: relative;
}
section .post a::after {
    display: block;
    content: "";
    width: 12%;
    height: 17%;
    position: absolute;
    top: -3px;
    left: -3px;
    border-top: 3px solid #BCB171;
    border-left: 3px solid #BCB171;
    transition: all 0.5s ease 0s;
    -moz-transition: all 0.5s ease 0s;
    -ms-transition: all 0.5s ease 0s;
    -webkit-transition: all 0.5s ease 0s;
    -o-transition: all 0.5s ease 0s;
}
section .post a::before {
    display: block;
    content: "";
    width: 9%;
    height: 17%;
    position: absolute;
    bottom: -3px;
    right: -3px;
    border-bottom: 3px solid #BCB171;
    border-right: 3px solid #BCB171;
    transition: all 0.5s ease 0s;
    -moz-transition: all 0.5s ease 0s;
    -ms-transition: all 0.5s ease 0s;
    -webkit-transition: all 0.5s ease 0s;
}
section .post a h3 {
    color: #BCB171;
}
section .post a:hover::before, section .post a:hover::after {
    width: 95%;
    height: 90%;
}
section .post a:hover h3 {
    color: #897E3D;
}


section .post a img {
    width: 100%;
}

/*Pagination*/

.page-item a{
    color:#636161;
}

.page-item.active .page-link {
    background-color: #636161;
    border-color: #fff;
}

.search {
    max-width: 500px;
    margin: 0  auto;

}
select {

    text-align: center;
    text-align-last: center;
}
.search-group {
    display: inline-flex;
}
.search-input {
    display: inline-block;
}

.search-btn, .advanced-btn{
    color: #636161;
    display: inline-block;
    background: none;
    border: none;
    padding: 5px;
}

body .btn-bg.bg-2 {
    background: none;
    text-align: center;
    padding: 20px;
}
body .btn-bg.bg-2 .btn-2 button {
    color: #f5f5f5;
    background: #636161;

    border-radius: 10px;
    -webkit-transition: all 0.7s ease;
    transition: all 0.7s ease;
    padding: 20px;
}
body .btn-bg.bg-2 .btn-2 button:hover {
    background: transparent;
    color: #BCB171;
}
body .btn-bg.bg-2 .btn-2 button:hover:before,
body .btn-bg.bg-2 .btn-2 button:hover:after {
    -webkit-transition: all 0.7s ease;
    transition: all 0.7s ease;
    width: 100%;
}
body .btn-bg.bg-2 .btn-2 button:before,
body .btn-bg.bg-2 .btn-2 button:after {
    content: '';
    position: absolute;
    top: 0;
    left: 0px;
    width: 0px;
    height: 3px;
    background: #BCB171;
    transition: all 0.4s ease;
}
body .btn-bg.bg-2 .btn-2 button:after {
    top: inherit;
    left: inherit;
    bottom: 0;
    right: 0;
}


/*Show ejs CSS*/


.dateOption{
    display: flex;
    justify-content: space-between;
}

.dateOption p {
    font-family: 'Montserrat Alternates', sans-serif;
    font-size: 16px;

}

#carouselExampleIndicators {
    margin-top: 50px;
}

#edit-link{
    text-decoration: none;

}

.info {
    background-color: #f5f5f5;
}

.info i {
    color: #636161;
}

.heading h2 {
    font-family: Raleway;
    font-size: 18px;
}

.info p , .comment-text p{
    font-family: 'Montserrat Alternates', sans-serif;
}

#paint-year {
    font-size: 30px;
}



.comment {
    margin-top: 30px;
}


.comment-author {
    margin-bottom: 5px;
    font-size: 16px;
    font-weight: bold;
}

.comment-text {
    padding: 12px;
    background-color: #f8f8f8;
    border-bottom: 5px solid #e5e6e6;
}

.comment-date {
    margin-top: 5px;
    font-size: 12px;
    color: #bdc3c7;
}

.footer-container{
    padding-bottom: 2.5em;
}

/*BUTTON LOADER CSS*/


.btnLoader {
    display: inline-block;
    border: 1px solid ;
    border-radius: 4px;
    outline: none;
    /*padding: 10px 20px;*/
    line-height: 1.4;
    position: relative;
    transition: padding-right .3s ease;
    font-weight: 700;

}

.btnLoader.spinning{

    padding-right: 40px;
}

.btnLoader.spinning:after {
    content: '';
    position: absolute;
    right: 6px;
    top: 50%;
    width: 0;
    height: 0;
    box-shadow: 0px 0px 0 1px;
    position: absolute;
    border-radius: 50%;
    animation: rotate360 .5s infinite linear, exist .1s forwards ease;
}

.btnLoader.spinning:before {
    content: "";
    width: 0px;
    height: 0px;
    border-radius: 50%;
    right: 6px;
    top: 50%;
    position: absolute;
    border: 2px solid white;
    border-right: 3px solid #ff9999;
    animation: rotate360 .5s infinite linear, exist .1s forwards ease ;

}

/*form input size restriction*/
.form-size-res{
    max-width: 400px;
    margin: 0 auto;
}

@keyframes rotate360 {
    100% {
        transform: rotate(360deg);
    }
}
@keyframes exist {
    100% {
        width: 15px;
        height: 15px;
        margin: -8px 5px 0 0;
    }
}

@media screen and (max-width: 450px) {
    .heading {
        font-size:30px;
    }

}

.title {
    text-align: center;
    margin-bottom: 1rem;
}

.btn-capitalize {
    text-transform: capitalize;
}

section.profilepage .profile-container {
    background-color: #f5f5f5;
    border: 1px solid #cacaca;
    padding: 15px;
    margin-top: 0.5rem;
    margin-bottom: 2rem;
    font-size: larger;
}

.profile-container .row {
    margin-top: 0.5rem;
    padding: 5px 10px;
}


.dateOption p {
    font-size: 10px;
}

.loginpage, .blogpostindexpage, .showblogpostpage, .newblogpostpage,
.registerpage, .editblogpostpage, .blogpostindexpage, .profilepage {
    min-height: 100vh;
}

